syntax = "proto3";

package inventory.v1;
option go_package = "github.com/temporalio/temporal-shop/api/inventory/v1;inventory";

import "temporal_shop/values/v1/message.proto";
message PingRequest {
  string name = 1;
}
message PingResponse {
  string name = 1;
}

message GetGamesRequest {
  string version = 1;
  repeated string include_product_ids = 2;
}
message GetGamesResponse {
  repeated temporal_shop.values.v1.Game games = 1;
}